--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "notiflix": "^3.2.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.3.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
