--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "formik": "^2.2.9",
     "notiflix": "^3.2.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
