--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://PrysiazhnukSerhii.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@reduxjs/toolkit": "^1.8.5",
